force-app/main/default/objects/WorkOrder/fields/A_Trailer_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>A_Trailer_Check_Status__c</fullName>
    <label>A Trailer Inspection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Critical Issue</fullName>
            </value>
            <value>
                <fullName>Critical Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>