force-app/main/default/objects/WorkOrder/fields/Active_Session_1_Duration__c.field-meta.xml
<CustomField>
    <fullName>Active_Session_1_Duration__c</fullName>
    <description>The first active session for the duty.  Used to determine if there has been a rest break violation in field Rest_Break_Violation.</description>
    <formula>IF(NOT(ISBLANK(Rest_Break_1_Start__c)),
 (Rest_Break_1_Start__c - Duty_Start__c)*24,
 IF(NOT(ISBLANK(Duty_End__c)),
  (Duty_End__c - Duty_Start__c)*24,
  NULL
))</formula>
    <label>Active Session 1 Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>