force-app/main/default/objects/WorkOrder/fields/Duty_Board__c.field-meta.xml
<CustomField>
    <fullName>Duty_Board__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duty Template</label>
    <referenceTo>Route_Template__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>