force-app/main/default/objects/WorkOrder/fields/Job_Template__c.field-meta.xml
<CustomField>
    <fullName>Job_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Job Template the Work Order was created from</description>
    <label>Job Template</label>
    <referenceTo>Job_Template__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>