force-app/main/default/objects/WorkOrder/fields/Parking_Bay__c.field-meta.xml
<CustomField>
    <fullName>Parking_Bay__c</fullName>
    <label>Parking Bay</label>
    <length>10</length>
    <type>Text</type>
</CustomField>