force-app/main/default/objects/WorkOrder/fields/PDC_PM_Fire_Extinguisher__c.field-meta.xml
<CustomField>
    <fullName>PDC_PM_Fire_Extinguisher__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Fire Extinguisher tagged in date</label>
    <type>Checkbox</type>
</CustomField>