force-app/main/default/objects/WorkOrder/fields/PDC_PM_Lenses_Reflector__c.field-meta.xml
<CustomField>
    <fullName>PDC_PM_Lenses_Reflector__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lenses and reflectors OK</label>
    <type>Checkbox</type>
</CustomField>