force-app/main/default/objects/WorkOrder/fields/PDC_PM_Mudguards__c.field-meta.xml
<CustomField>
    <fullName>PDC_PM_Mudguards__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mudguards in good condition</label>
    <type>Checkbox</type>
</CustomField>