force-app/main/default/objects/WorkOrder/fields/PDC_PM_Rego_Plates__c.field-meta.xml
<CustomField>
    <fullName>PDC_PM_Rego_Plates__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Number plates OK</label>
    <type>Checkbox</type>
</CustomField>