force-app/main/default/objects/WorkOrder/fields/PDC_PM_Safety_Labels__c.field-meta.xml
<CustomField>
    <fullName>PDC_PM_Safety_Labels__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Safety labels &amp; signs fitted (if applic)</label>
    <type>Checkbox</type>
</CustomField>