force-app/main/default/objects/WorkOrder/fields/PDC_PM_Suspension__c.field-meta.xml
<CustomField>
    <fullName>PDC_PM_Suspension__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Vehicle suspension – visual check OK</label>
    <type>Checkbox</type>
</CustomField>