force-app/main/default/objects/WorkOrder/fields/PDC_PM_Wheel_Nut_Position__c.field-meta.xml
<CustomField>
    <fullName>PDC_PM_Wheel_Nut_Position__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Wheel nut indicator positions OK</label>
    <type>Checkbox</type>
</CustomField>