force-app/main/default/objects/WorkOrder/fields/PDC_Rigid_Check_curtain__c.field-meta.xml
<CustomField>
    <fullName>PDC_Rigid_Check_curtain__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Check curtain buckles for security</label>
    <type>Checkbox</type>
</CustomField>