force-app/main/default/objects/WorkOrder/fields/PDC_Rigid_LSE_Body_Forks_Cracks_Damage__c.field-meta.xml
<CustomField>
    <fullName>PDC_Rigid_LSE_Body_Forks_Cracks_Damage__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Body &amp; Forks-Check for cracks or damage</label>
    <type>Checkbox</type>
</CustomField>