force-app/main/default/objects/WorkOrder/fields/PDC_Rigid_LSE_Braking_System__c.field-meta.xml
<CustomField>
    <fullName>PDC_Rigid_LSE_Braking_System__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Braking system-Check forward &amp; reverse</label>
    <type>Checkbox</type>
</CustomField>