force-app/main/default/objects/WorkOrder/fields/PDC_Trailer_A_Free_of_oil_leaks__c.field-meta.xml
<CustomField>
    <fullName>PDC_Trailer_A_Free_of_oil_leaks__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Free of Air or oil leaks</label>
    <type>Checkbox</type>
</CustomField>