force-app/main/default/objects/WorkOrder/fields/PDC_Trailer_B_Attached__c.field-meta.xml
<CustomField>
    <fullName>PDC_Trailer_B_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trailer-B Attached?</label>
    <type>Checkbox</type>
</CustomField>