force-app/main/default/objects/WorkOrder/fields/PDC_Trailer_B_Turntable__c.field-meta.xml
<CustomField>
    <fullName>PDC_Trailer_B_Turntable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Turntable and kingpin secure</label>
    <type>Checkbox</type>
</CustomField>