force-app/main/default/objects/WorkOrder/fields/Previous_Duty_End__c.field-meta.xml
<CustomField>
    <fullName>Previous_Duty_End__c</fullName>
    <description>The date time the previous duty finished.  Used to determine if the has been a shift break violation (i.e. more that 10 hrs before shifts).  Field is set in flow TDF_Fit_For_Duty</description>
    <label>Previous Duty End</label>
    <type>DateTime</type>
</CustomField>