force-app/main/default/objects/WorkOrder/fields/Rest_Break_Now_Test__c.field-meta.xml
<CustomField>
    <fullName>Rest_Break_Now_Test__c</fullName>
    <description>Now plus 1 minute. Used to determine if device is offline in Transport Rest Break mobile flow</description>
    <formula>NOW()+ 1/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rest Break Now Test</label>
    <type>DateTime</type>
</CustomField>