force-app/main/default/objects/WorkOrder/fields/Start_Date_Day__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Day__c</fullName>
    <formula>CASE(
MOD(DATEVALUE(StartDate) - DATE(1900, 1, 7), 7), 
0, &quot;Sun&quot;, 
1, &quot;Mon&quot;, 
2, &quot;Tue&quot;, 
3, &quot;Wed&quot;, 
4, &quot;Thu&quot;, 
5, &quot;Fri&quot;, 
6, &quot;Sat&quot;, &quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Day</label>
    <type>Text</type>
</CustomField>