force-app/main/default/objects/WorkOrder/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <formula>CASESAFEID($User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserId</label>
    <type>Text</type>
</CustomField>