force-app/main/default/objects/WorkOrder/fields/Vehicle_Reg_Num__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Reg_Num__c</fullName>
    <formula>Vehicle__r.Registration_Number__c</formula>
    <label>Vehicle Reg Num</label>
    <type>Text</type>
</CustomField>