force-app/main/default/objects/WorkOrder/fields/Vehicle_Utilisation__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Utilisation__c</fullName>
    <description>The utilisation of the vehicle based on load and capacity at the time.</description>
    <formula>IF ((Vehicle__r.Capacity__c +  Trailer_1__r.Capacity__c + Trailer_2__r.Capacity__c) &gt; 0,
   Vehicle_Load__c / ( Vehicle__r.Capacity__c +  Trailer_1__r.Capacity__c + Trailer_2__r.Capacity__c ),
   0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The utilisation of the vehicle based on load and capacity at the time</inlineHelpText>
    <label>Vehicle Utilisation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>