force-app/main/default/objects/WorkOrder/recordTypes/Drop_Off_Trailer.recordType-meta.xml
<RecordType>
    <fullName>Drop_Off_Trailer</fullName>
    <active>true</active>
    <description>Drop Trailer</description>
    <label>Drop Off Trailer</label>
</RecordType>