force-app/main/default/objects/WorkOrder/recordTypes/Fit_For_Duty.recordType-meta.xml
<RecordType>
    <fullName>Fit_For_Duty</fullName>
    <active>true</active>
    <label>Fit For Duty</label>
</RecordType>