force-app/main/default/objects/WorkOrder/recordTypes/PDC_PrimeMover.recordType-meta.xml
<RecordType>
    <fullName>PDC_PrimeMover</fullName>
    <active>true</active>
    <description>Pre Departure Check - Prime Mover Vehicle</description>
    <label>PDC - PrimeMover</label>
</RecordType>