force-app/main/default/objects/WorkOrder/recordTypes/PDC_Rigid.recordType-meta.xml
<RecordType>
    <fullName>PDC_Rigid</fullName>
    <active>true</active>
    <description>Pre Departure Check - Rigid Vehicle</description>
    <label>PDC - Rigid</label>
</RecordType>