force-app/main/default/objects/WorkOrder/recordTypes/PDC_Trailer.recordType-meta.xml
<RecordType>
    <fullName>PDC_Trailer</fullName>
    <active>true</active>
    <description>Pre Departure Check - Trailer</description>
    <label>PDC - Trailer</label>
</RecordType>