force-app/main/default/objects/WorkOrder/recordTypes/Return_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Return_Vehicle</fullName>
    <active>true</active>
    <description>Return Vehicle</description>
    <label>Return Vehicle</label>
</RecordType>