force-app/main/default/objects/WorkOrder/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Other record types - Delivery, Collection, Rest Break, etc</description>
    <label>Standard</label>
</RecordType>