force-app/main/default/objects/WorkOrder/listViews/AJ_By_PDC_With_No_Vehicle.listView-meta.xml
<ListView>
    <fullName>AJ_By_PDC_With_No_Vehicle</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4 AND 5</booleanFilter>
    <columns>Name</columns>
    <columns>ParentWorkOrder</columns>
    <columns>Status</columns>
    <columns>LastModifiedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>CreatedDate</field>
        <operation>greaterThan</operation>
        <value>7/1/2018 12:00 AM</value>
    </filters>
    <label>AJ By PDC with No Vehicle</label>
    <language>en_US</language>
    <sharedTo>
        <group>AP_Transport</group>
    </sharedTo>
</ListView>