force-app/main/default/objects/WorkOrder/listViews/All_WorkOrders.listView-meta.xml
<ListView>
    <fullName>All_WorkOrders</fullName>
    <columns>Name</columns>
    <columns>CreatedDate</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Subject</columns>
    <columns>Location</columns>
    <columns>Vehicle__c</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Orders</label>
    <language>en_US</language>
</ListView>